src/assets/stylesheets/Footer.module.css
.footer {
  position: absolute;
  width: 100%;
  bottom: 0;
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: white;
  color: #101821;
  padding: 10px 10px 1px 10px;
}

.logo {
  height: 50px;
  margin: 8px;
}

.right {
  display: flex;
}

.heart {
  color: red;
  font-weight: bolder;
}

